@@ -1,3 +1,9 @@
+Web Jun 20 22:14:43 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
+ - drivers/megatec.c, drivers/megatec_usb.c: reverted changes to
+   megatec_usb from previous revision. Modified megatec to exclude
+   modem control lines stuff using ifdefs (for subdrivers).
+
 Tue Jun 19 06:52:21 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/megatec.[ch], drivers/megatec_usb.c: set modem control lines
